Correction de l'alignement de la navigation

--- a/less/style.less
+++ b/less/style.less
@@ -1,7 +1,6 @@
 body {
 	font-family: Verdana;
 	text-decoration: none;
-	list-style: none;
 	padding: 0;
 	margin: 0;
 
@@ -21,9 +20,11 @@ body {
 	}
 
 	nav {
-		display: flex;
-		flex-direction: column;
-		justify-content: space-around;
+		ul {
+			display: flex;
+			justify-content: space-around;
+			list-style-type: none;
+		}
 	}
 
 	section {
